<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/settings_cat_appearance"
        app:iconSpaceReserved="false">

        <ListPreference
            app:key="pref_theme"
            app:title="@string/settings_theme"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:persistent="false"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="pref_contrast"
            app:title="@string/settings_contrast"
            app:summary="@string/settings_contrast_summary"
            app:entries="@array/contrast_entries"
            app:entryValues="@array/contrast_values"
            app:persistent="false"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="pref_dynamic_color"
            app:title="@string/settings_dynamic_color"
            app:summary="@string/settings_dynamic_color_summary"
            app:iconSpaceReserved="false"
            app:widgetLayout="@layout/view_preference_switch"
            app:persistent="false" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/settings_cat_lock"
        app:iconSpaceReserved="false">

        <ListPreference
            app:key="pref_lock_timeout"
            app:title="@string/settings_lock_timeout"
            app:entries="@array/lock_timeout_entries"
            app:entryValues="@array/lock_timeout_values"
            app:persistent="false"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="pref_biometric"
            app:title="@string/settings_biometric"
            app:summary="@string/settings_biometric_summary"
            app:iconSpaceReserved="false"
            app:widgetLayout="@layout/view_preference_switch"
            app:persistent="false" />

        <Preference
            app:key="pref_lock_now"
            app:iconSpaceReserved="false"
            app:title="@string/settings_lock_now"
            app:summary="@string/settings_lock_now_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/settings_cat_security"
        app:iconSpaceReserved="false">

        <Preference
            app:key="pref_change_passphrase"
            app:iconSpaceReserved="false"
            app:title="@string/settings_change_passphrase"
            app:summary="@string/settings_change_passphrase_summary" />

        <SwitchPreferenceCompat
            app:key="pref_privacy_screen"
            app:iconSpaceReserved="false"
            app:title="@string/settings_privacy_screen"
            app:summary="@string/settings_privacy_screen_summary"
            app:widgetLayout="@layout/view_preference_switch"
            app:persistent="false" />

        <SwitchPreferenceCompat
            app:key="pref_allow_screenshots"
            app:title="@string/settings_allow_screenshots"
            app:summary="@string/settings_allow_screenshots_summary"
            app:widgetLayout="@layout/view_preference_switch"
            app:iconSpaceReserved="false"
            app:persistent="false" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/settings_cat_organization"
        app:iconSpaceReserved="false">

        <Preference
            app:key="pref_manage_tags"
            app:iconSpaceReserved="false"
            app:title="@string/settings_manage_tags"
            app:summary="@string/settings_manage_tags_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/settings_cat_reminders"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="pref_daily_reminder"
            app:iconSpaceReserved="false"
            app:title="@string/settings_daily_reminder"
            app:summary="@string/settings_daily_reminder_summary"
            app:widgetLayout="@layout/view_preference_switch"
            app:persistent="false" />

        <Preference
            app:key="pref_reminder_time"
            app:iconSpaceReserved="false"
            app:title="@string/settings_reminder_time"
            app:persistent="false" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/settings_cat_data"
        app:iconSpaceReserved="false">

        <Preference
            app:key="pref_backup_export"
            app:iconSpaceReserved="false"
            app:title="@string/settings_backup_export"
            app:summary="@string/settings_backup_export_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/settings_cat_about"
        app:iconSpaceReserved="false">

        <Preference
            app:key="pref_license"
            app:iconSpaceReserved="false"
            app:summary="@string/settings_license_summary"
            app:title="@string/settings_license" />

        <Preference
            app:key="pref_source_code"
            app:iconSpaceReserved="false"
            app:summary="@string/settings_source_code_summary"
            app:title="@string/settings_source_code" />

        <Preference
            app:key="pref_support"
            app:iconSpaceReserved="false"
            app:summary="@string/settings_support_summary"
            app:title="@string/settings_support" />

        <Preference
            app:key="pref_author"
            app:iconSpaceReserved="false"
            app:summary="@string/settings_author_summary"
            app:title="@string/settings_author" />

        <Preference
            app:key="pref_version"
            app:iconSpaceReserved="false"
            app:title="@string/settings_version"/>
    </PreferenceCategory>
</PreferenceScreen>