<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:id="@+id/sort_group"
                android:checkableBehavior="single">
                <item android:id="@+id/sort_newest" android:title="@string/sort_newest" />
                <item android:id="@+id/sort_oldest" android:title="@string/sort_oldest" />
                <item android:id="@+id/sort_title" android:title="@string/sort_title" />
            </group>
        </menu>
    </item>

</menu>