<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:id="@+id/sort_group_tag_picker"
                android:checkableBehavior="single">
                <item android:id="@+id/sort_tag_name_asc" android:title="@string/sort_name_asc" android:checked="true" />
                <item android:id="@+id/sort_tag_name_desc" android:title="@string/sort_name_desc" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_done"
        android:icon="@drawable/ic_check"
        android:title="@string/action_done"
        app:showAsAction="ifRoom" />

</menu>