<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/journalFragment">

    <fragment
        android:id="@+id/journalFragment"
        android:name="com.mowtiie.dearest.ui.fragments.JournalFragment"
        android:label="@string/title_journal" />

    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.mowtiie.dearest.ui.fragments.CalendarFragment"
        android:label="@string/title_calendar" />

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.mowtiie.dearest.ui.fragments.SearchFragment"
        android:label="@string/title_search" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.mowtiie.dearest.ui.fragments.SettingsFragment"
        android:label="@string/title_settings" />
</navigation>
